# Rekrutacja

./: CMakeLists.txt
CompressData/: CMakeLists.txt
CompressData/source/: main.cpp
TicketMachine/: CMakeLists.txt
TicketMachine/include/: StringHelper.h
TicketMachine/include/TicketMachine/: TicketMachine.h
TicketMachine/source/: StringHelper.cpp  main.cpp
TicketMachine/source/TicketMachine/: TicketMachine.cpp
Triangles/: CMakeLists.txt
Triangles/include/: Triangle.h
Triangles/source/: Triangle.cpp  main.cpp
